--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "doku",
+  "version": "0.0.0",
   "private": true,
   "dependencies": {
     "@ebay/nice-modal-react": "^1.2.13",
