--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -1,26 +1,26 @@
 {
   "compilerOptions": {
-    "strict": false,
-    "strictNullChecks": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowUnusedLabels": false,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "jsx": "react",
-    "moduleResolution": "node",
-    "module": "es2022",
-    "noImplicitReturns": true,
-    "noUnusedParameters": false,
-    "outDir": "dist",
-    "removeComments": false,
-    "sourceMap": true,
-    "target": "es2017",
-    "lib": ["es7", "dom"],
-    "pretty": true,
-    "typeRoots": ["node_modules/@types"],
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
